fixed stopping overlapping with illo

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body{
     /* border: red solid; */
     font-size: 15px;
     line-height: 130%;
-    width: 188px;
+    width: 195px;
 
     margin: auto;
 
